mdapipkg/unpackaged/objects/contracts_import__c.object
<CustomObject>
    <fields>
        <fullName>Contract_or_Agreement__c</fullName>
        <label>Contract or Agreement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <type>Url</type>
    </fields>
    <label>contracts import</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contract_or_Agreement__c</columns>
        <columns>title__c</columns>
        <columns>url__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>contracts import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>contracts imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>